# aw-sync-server

./: .gitignore  README.md  pyproject.toml
src/aw_sync_server/: db.py  main.py
tests/: test_server.py
