[project]
name = "aw-sync-server"
version = "0.1.0"
description = "Cloud sync server for ActivityWatch — proof of concept"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
]

[project.scripts]
aw-sync-server = "aw_sync_server.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aw_sync_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
